HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/CapabilityClassesDiagnostics/Source/Main.uv
//! Rejected capability-class specimen for capability-operation diagnostics.

public procedure capabilityClassesDiagnosticsReference(context: Context) -> () {
    let pointer: *mut u8 = null
    context.heap~>dealloc_raw(pointer, 1usize)
}
